[gd_scene load_steps=12 format=3 uid="uid://6pm364dladuk"]

[ext_resource type="Script" uid="uid://cv6utyivdu78w" path="res://script/enemy_l3_boss.gd" id="1_evy0o"]
[ext_resource type="PackedScene" uid="uid://rkxee45vh2xi" path="res://Scenes/Enemy_L3_1.tscn" id="2_pkqgn"]
[ext_resource type="PackedScene" uid="uid://chu7lbhuxpdt" path="res://Scenes/Enemy_L3_2.tscn" id="3_vt88q"]
[ext_resource type="PackedScene" uid="uid://j78iqjuu0hel" path="res://Scenes/Enemy_L3_3.tscn" id="4_yplnx"]
[ext_resource type="PackedScene" uid="uid://iyuxiqky4204" path="res://Scenes/Boss_Attack.tscn" id="5_vt88q"]
[ext_resource type="SpriteFrames" uid="uid://byjkpm6s1pqoj" path="res://Tileset/mundo3/Characters/Enemy_L3_Boss.tres" id="6_y5jc7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_r31l6"]
radius = 45.2217

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cxayi"]
size = Vector2(33.25, 66.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_evy0o"]
radius = 19.0263

[sub_resource type="CircleShape2D" id="CircleShape2D_6x7ig"]
radius = 42.2703

[sub_resource type="CircleShape2D" id="CircleShape2D_si32j"]
radius = 72.8952

[node name="Enemy_Boss" type="CharacterBody2D"]
script = ExtResource("1_evy0o")
enemy1 = ExtResource("2_pkqgn")
enemy2 = ExtResource("3_vt88q")
enemy3 = ExtResource("4_yplnx")
attackProy = ExtResource("5_vt88q")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 36)
scale = Vector2(0.35, 0.35)
sprite_frames = ExtResource("6_y5jc7")
frame_progress = 0.270123

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -34.0
offset_top = -53.0
offset_right = 35.0
offset_bottom = -46.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 33)
shape = SubResource("CircleShape2D_r31l6")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(58, 54)
shape = SubResource("RectangleShape2D_cxayi")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="."]
position = Vector2(-59, 55)
shape = SubResource("RectangleShape2D_cxayi")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="."]
position = Vector2(67, 99)
shape = SubResource("CircleShape2D_evy0o")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="."]
position = Vector2(-68, 101)
shape = SubResource("CircleShape2D_evy0o")

[node name="AttackArea" type="Area2D" parent="."]
position = Vector2(48, 20)
scale = Vector2(-2.6501, 2.46722)

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(18.1125, 22.6976)
shape = SubResource("CircleShape2D_6x7ig")
debug_color = Color(0.853608, 0.338231, 0.396533, 0.42)

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="GenerateTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="DetentionArea" type="Area2D" parent="."]
scale = Vector2(1.88598, 1.54622)

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetentionArea"]
position = Vector2(-0.530228, 44.625)
shape = SubResource("CircleShape2D_si32j")

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(0, 19)

[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
[connection signal="body_entered" from="DetentionArea" to="." method="_on_detention_area_body_entered"]
[connection signal="body_exited" from="DetentionArea" to="." method="_on_detention_area_body_exited"]
